subscribe form start, e-blast

--- a/email-subscribe.html
+++ b/email-subscribe.html
@@ -79,8 +79,7 @@
 
   <section class="container padding-tb-30 margin-bottom-30">
     <div class="container width-40">
-      <h2>Subscribe to Receive E-blasts</h2>
-      <p class="margin-bottom-30">Get e-mail updates about StoneAge products, tool notices, alerts about tool releases, and special offers. We keep these to a minimum so we're not slamming your inbox.</p>
+      <p class="margin-bottom-30">Get e-mail updates about StoneAge product releases, tool notices, and special offers. We keep these to a minimum so we're not slamming your inbox.</p>
       <!--[if lte IE 8]>
       <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
       <![endif]-->
@@ -91,7 +90,7 @@
           formId: '270abcf6-5c52-4749-b323-7838ddc846f8',
           submitButtonClass: '.btn.btn-lg.btn-block'
         });
-      </script>
+      </script> 
     </div>
   </section>
   
