--- a/trademark-list.html
+++ b/trademark-list.html
@@ -550,6 +550,9 @@
             <td>StoneAge Solutions&trade;</td><td>engineering services</td>
         </tr>
         <tr>
+            <td>Switcher&trade;</td><td>sewer cleaning tool, sewer nozzle, sewer jetting head</td>
+        </tr>
+        <tr>
             <td>TB-6-TR&trade;</td><td>extension boom, positioning tool</td>
         </tr>
         <tr>
