--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -87,11 +87,21 @@
       <div class="container padding-tb-30">
         <!-- Row 1 -->
         <div class="row">
+          <div class="col-sm-4 text-left">
+            <img src="assets/img/featured-tag.png" alt="Featured Tool" class="img-responsive" />
+            <div class="embed-responsive embed-responsive-16by9" style="margin-right:30px; margin-bottom:10px;">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iybnXP6faVU" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+                      
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Small Lines  <span class="small thin">2-4 in./51-152 mm</span></a>
-              <a href="sewer-tools-nozzles/warthog-wv.html" class="list-group-item">WV-1/4<span class="label label-info">2-4"</span></a>
-              <a href="sewer-tools-nozzles/warthog-wt.html" class="list-group-item">WT-3/8-C<span class="label label-info">3-6"</span></a>
+              <a href="#" class="list-group-item header">Large Lines  <span class="small thin">8-36 in./203-914 mm</span></a>
+              <a href="sewer-tools-nozzles/warthog-wgr-switcher.html" class="list-group-item">WGR Switcher<span class="label label-info">6-36"</span><span class="label label-warning">New!</span></a>
+              <a href="sewer-tools-nozzles/warthog-wgr-magnum.html" class="list-group-item">WGR Magnum<span class="label label-info">6-36"</span></a>
+              <a href="sewer-tools-nozzles/warthog-wg.html" class="list-group-item">WG-1<span class="label label-info">8-36"</span></a>
+              <a href="sewer-tools-nozzles/warthog-wgp.html" class="list-group-item">WGP-1 (Puller)<span class="label label-info">8-36"</span></a>
+              <a href="sewer-tools-nozzles/warthog-wd.html" class="list-group-item">WD 1-1/4<span class="label label-info">8-36"</span></a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
@@ -103,25 +113,23 @@
               <a href="sewer-tools-nozzles/warthog-whp.html" class="list-group-item">WHP-3/4<span class="label label-info">6-18"</span></a>
             </div>
           </div>
-          <div class="col-sm-4 product-list">
-            <div class="list-group">
-              <a href="#" class="list-group-item header">Large Lines  <span class="small thin">8-36 in./203-914 mm</span></a>
-              <a href="sewer-tools-nozzles/warthog-wgr-magnum.html" class="list-group-item">WGR Magnum<span class="label label-info">6-36"</span></a>
-              <a href="sewer-tools-nozzles/warthog-wg.html" class="list-group-item">WG-1<span class="label label-info">8-36"</span></a>
-              <a href="sewer-tools-nozzles/warthog-wgp.html" class="list-group-item">WGP-1 (Puller)<span class="label label-info">8-36"</span></a>
-              <a href="sewer-tools-nozzles/warthog-wd.html" class="list-group-item">WD 1-1/4<span class="label label-info">8-36"</span></a>
-            </div>
-          </div>
         </div>
         
         <div class="row">
-          <div class="col-sm-6 product-list">
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Small Lines  <span class="small thin">2-4 in./51-152 mm</span></a>
+              <a href="sewer-tools-nozzles/warthog-wv.html" class="list-group-item">WV-1/4<span class="label label-info">2-4"</span></a>
+              <a href="sewer-tools-nozzles/warthog-wt.html" class="list-group-item">WT-3/8-C<span class="label label-info">3-6"</span></a>
+            </div>
+          </div>
+          <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Hydro-Excavation</a>
               <a href="sewer-tools-nozzles/hydro-x.html" class="list-group-item">Hydro-X</a>
             </div>
           </div>
-          <div class="col-sm-6 product-list">
+          <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Accessories</a>
               <a href="sewer-tools-nozzles/manhole-cleaner.html" class="list-group-item">Manhole Cleaner</a>
