add job, start ABX-2L accessories pages

--- a/careers.html
+++ b/careers.html
@@ -104,6 +104,10 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
+              <a href="assets/pdf/jobs/Regional_Site_Office_Manager.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Regional Site Office Manager</h4></a>
+                <p>This position’s primary responsibility is to provide exceptional customer service via inbound phone calls, greeting of walk-in customers, and timely execution of sales and rental requests.</p>
+            </li>
+            <li>
               <a href="assets/pdf/jobs/Product_Manager_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Product Manager</h4></a>
                 <p>The Product Manager is responsible for managing all aspects of the product planning process across assigned market divisions and ensuring that all assigned product development efforts support the company’s overall strategy and goals.</p>
             </li>
