Add SpinCat maint vids

--- a/downhole-wash-tools/spincat-sc-212.html
+++ b/downhole-wash-tools/spincat-sc-212.html
@@ -192,6 +192,24 @@
             </div>
           </div>
           <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Videos <span class="glyphicon glyphicon-plus"></span>
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-sm-6">
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/efqrEadDgIw" frameborder="0" allowfullscreen></iframe><p class="caption">SpinCat SC-212 Maintenance</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingFour">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
