--- a/downhole-wash-tools/spincat-sc-250.html
+++ b/downhole-wash-tools/spincat-sc-250.html
@@ -78,7 +78,7 @@
   <div class="containter-fluid breadcrumb-row">
     <div class="container">
       <ul class="breadcrumb">
-        <li><a href="../index.html">Home</i></a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../downhole-tools.html">Downhole Tools</a></li>
         <li class="active">SpinCat SC-250</li>
       </ul> 
@@ -98,7 +98,7 @@
         <div class="product-heading">
           <h1>SpinCat SC-250</h1>
           <div class="dropdown product-social">
-            <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
+            <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
             <ul class="dropdown-menu">
               <li><a href="mailto:?subject=StoneAge SpinCat SC-250&body=Check out the StoneAge SpinCat SC-250 downhole wash tools: http://www.stoneagetools.com/downhole-wash-tools/spincat-sc-250.html">E-mail link</a></li>
             </ul>
@@ -192,6 +192,24 @@
             </div>
           </div>
           <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Videos <span class="glyphicon glyphicon-plus"></span>
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-sm-6">
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/2KCDxRsrF2A" frameborder="0" allowfullscreen></iframe><p class="caption">SpinCat SC-250 Maintenance</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingFour">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -244,7 +262,6 @@
           <h5>SpinCat SC-287</h5></a>
         </div>
       </div>
-    </div>
   </section>
   <!-- End Related Items -->
   
