--- a/sewer-tools-nozzles/warthog-wg.html
+++ b/sewer-tools-nozzles/warthog-wg.html
@@ -173,12 +173,12 @@ Hardened stainless steel orifices resist cracking and scratching</li>
                   <tr>
                     <th>Pipe Size</th>
                     <td>8-36 in.</td>
-                    <td><span class="metric">203-914 cm</span
+                    <td><span class="metric">203-914 cm</span>
                   </tr>
                   <tr>
                     <th>Pressure Range</th>
                     <td>1500–5k psi</td>
-                    <td><span class="metric">100–350 bar</span
+                    <td><span class="metric">100–350 bar</span>
                   </tr>
                   <tr>
                     <th>Flow Range</th>
