--- a/waterblast-automation/navigator-hose-drive.html
+++ b/waterblast-automation/navigator-hose-drive.html
@@ -229,7 +229,7 @@
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/navigator_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 Data Sheet</a></li>
-<!--                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 User Manual</a></li>-->
+                  <li><a href="../assets/pdf/manuals/NAV-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Navigator Nav-100 User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
