--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -161,6 +161,11 @@
               <div class="panel-body">
                 <table class="table specs table-hover">
                 <tbody>
+                  <tr>
+                    <th>Tool Family</th>
+                    <td colspan="2">AutoBox</td>
+                  </tr>
+                  <tr>
                     <th>Tool Model</th>
                     <td colspan="2">ProDrive</td>
                   </tr>
@@ -218,8 +223,8 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="../assets/pdf/prodrive_data_sheet.pdf"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive Data Sheet</a></li>
-<!--                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive User Manual</a></li>-->
+                  <li><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive Data Sheet</a></li>
+                  <li><a href="../assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
