careers updates & redirect

--- a/careers.html
+++ b/careers.html
@@ -104,7 +104,15 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
-              <a href="assets/pdf/jobs/Regional_Site_Office_Manager.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Regional Site Office Manager</h4></a>
+              <a href="assets/pdf/jobs/Order_Fulfillment_Team_Member_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Order Fulfillment Team Member</h4></a>
+                <p>This position’s primary responsibility is to manage all aspects of material flow, inventory control, shipping, and receiving pertaining to StoneAge’s customer orders.</p>
+            </li>
+            <li>
+              <a href="assets/pdf/jobs/Customer_Service_Representative_201602.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Customer Service Representative </h4></a>
+                <p>The Customer Service Representative (CSR) is responsible for responding to technical support, quoting and order fulfillment requests from the outside sales force, customers, dealers and resellers in the sewer and waterblast divisions.</p>
+            </li>
+            <li>
+              <a href="assets/pdf/jobs/Regional_Site_Office_Manager.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Office Manager - Louisiana Regional Office</h4></a>
                 <p>This position’s primary responsibility is to provide exceptional customer service via inbound phone calls, greeting of walk-in customers, and timely execution of sales and rental requests.</p>
             </li>
             <li>
@@ -116,20 +124,12 @@
                 <p>The Project Manager’s primary function will be to provide project management support and communication for New Product Development efforts and Custom Projects.</p>
             </li>
             <li>
-              <a href="assets/pdf/jobs/Mechanic-Louisiana_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Louisiana Facility</h4></a>
-                <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
-            </li>
-            <li>
               <a href="assets/pdf/jobs/Large_Assembly_Team_Member_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Large Assembly Team Member</h4></a>
                 <p>This position is responsible for the assembly of our automated equipment required by work orders, including but not limited to inspection of all assemblies assigned by Assembly Supervisor.</p>
             </li>
             <li>
               <a href="assets/pdf/jobs/Director-Finanace_IT_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Director of Finance and Information Systems</h4></a>
                 <p>The Director of Finance and Information Systems oversees StoneAge’s accounting, financial, and IT/IS functions.</p>
-            </li>
-            <li>
-              <a href="assets/pdf/jobs/Mechanic-Houston_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Houston Facility</h4></a>
-                <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
             </li>
             <li>
               <a href="assets/pdf/jobs/machinist-3_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Machinist III</h4></a>
