news, switcher landing, add zip code to catalog request

--- a/request-catalog.html
+++ b/request-catalog.html
@@ -93,6 +93,7 @@
           <input name="state" type="text" id="state" size="30" placeholder="State/Province" class="form-control">
           <input name="city" type="text" id="city" size="30" placeholder="City" class="form-control">
           <br>
+          <input name="code" type="text" id="code" size="30" placeholder="Zip/Postal Code" class="form-control">
           <input name="country" type="text" id="country" size="30" placeholder="Country" class="form-control">
           <br>
           <input name="email" type="email" id="email" size="30" placeholder="Email" class="form-control">
