prodrive updates, misc fixes

--- a/index.html
+++ b/index.html
@@ -239,10 +239,11 @@
       <div class="section-heading">
         <h2>Events</h2>
       </div>
-      <a href="http://wwettshow.com/" target="_blank"><img src="assets/img/thumb/upcoming_events_wwett2016.jpg" class="img-responsive"/></a>
+      <a href="http://www.ifat.de/" target="_blank"><img src="assets/img/thumb/upcoming_events_ifat2016.jpg" class="img-responsive"/></a>
       <div class="caption">
-      <h4><a href="http://wwettshow.com/" target="_blank">2016 WWETT Show</a></h4>
-      <p>The world’s largest annual trade show for environmental service professionals, the WWETT Show offers the latest products, technologies, and knowledge related to the water, wastewater and environmental service industry.</p>
+      <h4><a href="http://www.ifat.de/" target="_blank">2016 IFAT<br><span class="small">May 30–June 3, 2016<br>
+          Munich, Germany</span></a></h4>
+        <p>Presenting a comprehensive overview of the technological solutions and perspectives available from all around the world, IFAT is a great opportunity for industry and municipal authorities to discover innovations offered to the environmental technology sector.</p>
       </div>
     </div>
     <!-- End Events --> 
