--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -89,6 +89,8 @@
       466 S. Skylane Dr.<br>
         Durango CO 81303, USA</p>
       <p>Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
+      
+      <p><strong>Warthog Authorized Repair Centers</strong><br><a href="contact.html">See our listing of Warthog sewer tools dealers to find an Authorized Repair Center in your area.</a></p>
 
       <h2 class="section-heading">Lead Time</h2>
       <p>Call or email your order to StoneAge or an authorized dealer with purchase order number, shipping and billing addresses, and delivery date. Check datasheet to ensure specifications are complete. Advise whether we should hold shipment until all items are available.</p>
