--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -78,9 +78,9 @@
   <div class="containter-fluid breadcrumb-row">
     <div class="container">
       <ul class="breadcrumb">
-        <li><a href="../index.html">Home</i></a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp; Equipment</a></li>
-        <li class="active">ProDrive</li>
+        <li class="active">AutoBox ProDrive</li>
       </ul> 
     </div>
   </div>
@@ -115,9 +115,9 @@
       <!-- Product Info -->
       <div class="col-md-6 padding-left-60">
         <div class="product-heading">
-          <h1>ProDrive</h1>
+          <h1>AutoBox ProDrive</h1>
           <div class="dropdown product-social">
-            <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
+            <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
             <ul class="dropdown-menu">
               <li><a href="mailto:?subject=StoneAge ProDrive&body=Check out the ProDrive hose feed device engineered to quickly and safely clean a broad range of pipes:  http://www.stoneagetools.com/waterblast-automation/prodrive-hose-feed.html">E-mail link</a></li>
             </ul>
@@ -125,7 +125,8 @@
         <div class="clearfix"></div>
         </div>
 
-        <p class="product-description">The ProDrive is a hose feed device engineered to quickly and safely clean a broad range of pipes with or without a flange. The system is lightweight and designed for easy portability making it the perfect tool for limited access applications. Two control box options give maximum flexibility for efficient operation and operator safety.</p>
+        <p class="product-description">The ProDrive is a hose feed device engineered to quickly and safely clean a broad range of pipes with or without a flange. The system is lightweight portable, and highly adaptable, making it the perfect tool for limited access applications.</p>
+        <p class="product-description">Multiple mounting options are available for use with a variety of pipe sizes and configurations. The system also includes a lightweight control box for increased safety and mobility.</p>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
@@ -139,12 +140,12 @@
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <ul>
-                  <li>Less than 30 lbs (13.6 kg) – ideal for limited access applications</li>
-                  <li>Interchangeable gears allow use of a wide range of hoses</li>
-                  <li>Adjustable feed rates for optimal dwell time</li>
+                  <li>Lightweight and portable, the ProDrive is ideal for limited access pipe cleaning applications</li>
+                  <li>Accommodates multiple hose sizes</li>
                   <li>Built in backout preventer and splash guard for operator safety</li>
-                  <li>Two control box options – tripod mount for stability or floor stand for portability, both have an air operated dump control</li>
-                  <li>Navigates multiple welded 90° elbows without hose rotation</li>
+                  <li>Adjustable forwards and reverse feed rates maintain optimal dwell time</li>
+                  <li>Lightweight, ergonomic control box operates all features from outside the blast zone</li>
+                  <li>Optional snout simplifies setup for challenging applications</li>
                 </ul>
               </div>
             </div>
@@ -167,26 +168,26 @@
                   </tr>
                   <tr>
                     <th>Tool Model</th>
-                    <td colspan="2">ProDrive</td>
+                    <td colspan="2">ProDrive ABX-PRO</td>
                   </tr>
                   <tr>
-                    <th>Maximum Feed Rate</th>
-                    <td>2.5 ft/sec</td>
-                    <td class="metric">762 mm/sec</td>
+                    <th>Feed Rate</th>
+                    <td>0.2-2.5 ft/sec</td>
+                    <td class="metric">61-762 mm/sec</td>
                   </tr>
                   <tr>
-                    <th>Minimum Feed Rate</th>
-                    <td>0.2 ft/sec</td>
-                    <td><span class="metric">61 mm/sec</span></td>
-                  </tr>
-                  <tr>
-                    <th>Poly Hoses</th>
-                    <td colspan="2">4/2–8/4, 3/8 Rubber Covered</td>
+                    <th>Hose Size</th>
+                    <td colspan="2">3/2–8/4, 3/8 Rubber Covered</td>
                   </tr>
                   <tr>
                     <th>Drive Weight</th>
-                    <td>30 lbs</td>
-                    <td><span class="metric">13.6 kg</span></td>
+                    <td>25 lb</td>
+                    <td><span class="metric">11.3 kg</span></td>
+                  </tr>
+                  <tr>
+                    <th>Drive Dimensions</th>
+                    <td>7 x 9.25 x 10 in.</td>
+                    <td><span class="metric">178 x 235 x 254 mm</span></td>
                   </tr>
                 </tbody>
                 </table>
@@ -204,10 +205,10 @@
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/8ycXXbtS7zw" frameborder="0" allowfullscreen></iframe><p class="caption">ProDrive Overview Video</p>
+                  <iframe width="220" height="120" src="https://www.youtube.com/embed/8ycXXbtS7zw" frameborder="0" allowfullscreen></iframe><p class="caption">AutoBox ProDrive Overview</p>
                 </div>
                 <div class="col-sm-6">
-                    <iframe width="220" height="120" src="https://www.youtube.com/embed/tY1ZUDknsBs" frameborder="0" allowfullscreen></iframe><p class="caption">ProDrive Training</p>
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/tY1ZUDknsBs" frameborder="0" allowfullscreen></iframe><p class="caption">AutoBox ProDrive Training</p>
                 </div>
               </div>
             </div>
@@ -223,8 +224,8 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive Data Sheet</a></li>
-                  <li><a href="../assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive User Manual</a></li>
+                  <li><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Data Sheet</a></li>
+                  <li><a href="../assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive PRO-100 User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -248,18 +249,17 @@
         <h2>Related Items</h2>
     </div>
     <div class="row row-centered">
-        <div class="col-sm-2 col-centered">
-          <a href="../rotary-waterblast-tools/banshee-tube-cleaners.html"><img class="img-responsive" src="../assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
-          <h5>Banshee Beetle Tube Cleaning Tools</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-          <a href="../rotary-waterblast-tools/badger-2in-pipe-cleaning.html"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
-          <h5>2" Badger Pipe Cleaning Tools</h5></a>
-        </div>
-        <div class="col-sm-2 col-centered">
-          <a href="../rotary-waterblast-tools/backout-prevention.html"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="Backout Prevention for high pressure pipe cleaning">
-          <h5>Backout Prevention</h5></a>
-        </div>
+      <div class="col-sm-2 col-centered">
+        <a href="../rotary-waterblast-tools/banshee-tube-cleaners.html"><img class="img-responsive" src="../assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
+        <h5>Banshee Beetle Tube Cleaning Tools</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="../rotary-waterblast-tools/badger-2in-pipe-cleaning.html"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
+        <h5>2" Badger Pipe Cleaning Tools</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="navigator-hose-drive.html"><img class="img-responsive" src="../assets/img/product/thumb-navigator-01.jpg" alt="Navigator protable rotary hose device">
+        <h5>Navigator Portable Rotary Hose Device</h5></a>
       </div>
     </div>
   </section>
@@ -271,7 +271,7 @@
       <div class="col-md-7">
 
           <h2>Automated Hose Feed for Pipe Cleaning</h2>
-          <p>Lightweight and portable, the Prodrive is the perfect tool for limited access pipe cleaning applications.</p>
+          <p>Lightweight and portable, the ProDrive is the perfect tool for limited access pipe cleaning applications.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <table>
