--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -116,16 +116,16 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Pipe Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Pipe Cleaning</a>
               <a href="waterblast-automation/navigator-hose-drive.html" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
-              <a href="waterblast-automation/prodrive-hose-feed.html" class="list-group-item">ProDrive<span class="label label-warning">New for 2016</span></a>
+              <a href="waterblast-automation/prodrive-hose-feed.html" class="list-group-item">AutoBox ProDrive<span class="label label-warning">New for 2016</span></a>
               <a href="waterblast-automation/inside-diameter-pipe-cleaner.html" class="list-group-item">ID Pipe Cleaner</a>
               <a href="waterblast-automation/outside-diameter-pipe-cleaner.html" class="list-group-item">OD Pipe Cleaner</a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
               <a href="waterblast-automation/autobox-abx-2l.html" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
               <a href="waterblast-automation/bundle-blaster.html" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
 <!--              <a href="waterblast-automation/sabertooth-flex-lancing.html" class="list-group-item">Sabertooth<span class="label label-info">Flex Lancing</span></a>-->
@@ -138,7 +138,7 @@
         <div class="row padding-tb-30">
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Tank &amp; Vessel Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Tank &amp; Vessel Cleaning</a>
               <a href="waterblast-automation/torus-tr-130.html" class="list-group-item">Torus TR-130</a>
               <a href="waterblast-automation/torus-tr-200.html" class="list-group-item">Torus TR-200</a>
               <a href="waterblast-automation/torus-positioning-booms.html" class="list-group-item">Torus Positioning Booms</a>
@@ -147,7 +147,7 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Furnace &amp; Boiler Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Furnace &amp; Boiler Cleaning</a>
               <a href="waterblast-automation/boiler-tube-cleaner.html" class="list-group-item">Boiler Tube Cleaner<span class="label label-info">Package Boilers</span></a>
               <a href="waterblast-automation/yellow-jacket-boiler-cleaner.html" class="list-group-item">Yellow Jacket<span class="label label-info">Online Boiler Cleaning</span></a>
               <a href="waterblast-automation/cable-swivel-tool.html" class="list-group-item">Cable Swivel Tool</a>
@@ -156,13 +156,13 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Hose Control</h4>
+              <a href="#" class="list-group-item header">Automated Hose Control</a>
               <a href="waterblast-automation/autobox-abx-500.html" class="list-group-item">AutoBox ABX-500<span class="label label-info">Pipes and Vessels</span></a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Concrete Demolition</h4>
+              <a href="#" class="list-group-item header">Automated Concrete Demolition</a>
               <a href="waterblast-automation/blackhawk-concrete-demo.html" class="list-group-item">Blackhawk</a>
             </div>
           </div>
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Straight Pipe Cleaning</h4>
+              <a href="#" class="list-group-item header">Straight Pipe Cleaning</a>
               <a href="rotary-waterblast-tools/bjv-pipe-cleaning.html" class="list-group-item">BJV<span class="label label-info">Small &amp; Large Lines</span></a>
               <a href="rotary-waterblast-tools/bjv-centralizers.html" class="list-group-item">BJV Centralizers</a>
               <a href="rotary-waterblast-tools/gopher-tube-cleaning.html" class="list-group-item">Gopher<span class="label label-info">Extra High Flow Rates</span></a>
@@ -202,7 +202,7 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Curved Pipe Cleaning</h4>
+              <a href="#" class="list-group-item header">Curved Pipe Cleaning</a>
               <a href="rotary-waterblast-tools/badger-2in-pipe-cleaning.html" class="list-group-item">2" Badger</a>
               <a href="rotary-waterblast-tools/badger-4in-pipe-cleaning.html" class="list-group-item">4" Badger</a>
               <a href="rotary-waterblast-tools/badger-6in-pipe-cleaning.html" class="list-group-item">6" Badger</a>
@@ -210,7 +210,7 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Rotary Shotgun Cleaning</h4>
+              <a href="#" class="list-group-item header">Rotary Shotgun Cleaning</a>
               <a href="rotary-waterblast-tools/barracuda-shotgunning.html" class="list-group-item">Barracuda</a>
               <a href="rotary-waterblast-tools/spitfire-shotgunning.html" class="list-group-item">Spitfire</a>
             </div>
@@ -220,19 +220,19 @@
         <div class="row padding-tb-30">
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Exchanger Cleaning</a>
               <a href="rotary-waterblast-tools/banshee-tube-cleaners.html" class="list-group-item">Banshee/Beetle<span class="label label-danger">Best Selling</span></a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Rotary Swivels</h4>
+              <a href="#" class="list-group-item header">Rotary Swivels</a>
               <a href="rotary-waterblast-tools/rotary-swivels.html" class="list-group-item">Swivel Models</a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Waterblast Accessories</h4>
+              <a href="#" class="list-group-item header">Waterblast Accessories</a>
               <a href="rotary-waterblast-tools/nozzles-extensions.html" class="list-group-item">Nozzles and Extensions</a>
               <a href="rotary-waterblast-tools/backout-prevention.html" class="list-group-item">Backout Prevention</a>
               <a href="rotary-waterblast-tools/hose-storage-reel.html" class="list-group-item">Hose Storage Reel</a>
