--- a/404.html
+++ b/404.html
@@ -81,6 +81,7 @@
     <div class="col-sm-12 text-center">
       <h1 class="thin grey spaced margin-bottom-30 width-60">The content you are looking for doesn't appear to exisit on our website.</h1>
       <h3 class="width-60">Please try the navigation links above to view our products or the links below for suport.</h3>
+    </div>
   </section>
   
   <!-- Footer CTA -->
