--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,6 @@
       <div class="container">
         <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; Toll Free (866) 795-1586</h1>
         <h4 class="small">OUR SUPPORT TEAM IS HERE TO HELP. WE GLADLY RESPOND TO INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES. <span class="grey">Monday through Friday 8:00am - 5:00pm MST</span></h4>
-        </div>
       </div>
     </div>
      
@@ -89,10 +88,11 @@
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#contact-tab" aria-controls="contact-tab" role="tab" data-toggle="tab">Contact</a></li>
           <li role="presentation"><a href="#ordering-tab" aria-controls="ordering-tab" role="tab" data-toggle="tab">Ordering</a></li>
-          <li role="presentation"><a href="#wb-tab" aria-controls="wb-tab" role="tab" data-toggle="tab">Waterblast</a></li>
-          <li role="presentation"><a href="#sewer-tab" aria-controls="sewer-tab" role="tab" data-toggle="tab">Sewer</a></li>
-          <li role="presentation"><a href="#downhole-tab" aria-controls="downhole-tab" role="tab" data-toggle="tab">Downhole</a></li>
+          <li role="presentation"><a href="#wb-tab" aria-controls="wb-tab" role="tab" data-toggle="tab">Waterblast Dealers</a></li>
+          <li role="presentation"><a href="#sewer-tab" aria-controls="sewer-tab" role="tab" data-toggle="tab">Sewer Dealers</a></li>
+          <li role="presentation"><a href="#downhole-tab" aria-controls="downhole-tab" role="tab" data-toggle="tab">Downhole Dealers</a></li><!--
           <li role="presentation"><a href="#support-tab" aria-controls="support-tab" role="tab" data-toggle="tab">Repairs/Returns</a></li>
+-->
         </ul>
         <div class="tab-content padding-tb-30">
           <!-- Contact Tab Content -->
@@ -2578,7 +2578,7 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
               </div>
             </div>
           </div>
-          <!-- Repairs/Returns Tab Content -->
+          <!-- Repairs/Returns Tab Content
           <div role="tabpanel" class="tab-pane" id="support-tab">
             <div class="row">
               <div class="col-sm-6 padding-right-30">
@@ -2596,8 +2596,8 @@ NET - vysokotlaká technika, spol. s r. o.</h4>
                 <p>Any parts returned for credit or warranty must be accompanied by a StoneAge RMA number. Please contact a Customer Service Specialist or Authorized Dealer to obtain an RMA number. A minimum restocking fee of 15% applies to standard items returned unused. Returns will only be accepted on unused items returned 6 months or less from invoice date. All returns and restocking fees are subject to StoneAge final decision. Returns of custom products and obsolete items are not accepted.</p>
                 <p><a href="service-repairs-returns.html">See Service &amp; Repairs for more service information.</a></p>
             </div>
-          </div>
-        </div>
+          </div>-->
+        </div> 
       </div>
       <!-- End Nav tabs -->
   
