--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -135,6 +135,14 @@
         </table>
       </div>
       <div class="row grey">
+        <h3>Sewer Tools</h3>
+        <table class="table table-responsive">
+          <tr>
+            <td colspan="2">See our listing of <a href="contact.html">Warthog sewer tools dealers</a> to find an Authorized Repair Center in your area.</td>
+          </tr>
+        </table>
+      </div>
+      <div class="row grey">
         <h3>Downhole Tools</h3>
         <table class="table table-responsive">
           <tr>
