--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -225,6 +225,7 @@
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/prodrive_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Data Sheet</a></li>
+                  <li><a href="../assets/pdf/sales-manual/ABX-PRO_base_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive Package Configuration</a></li>
                   <li><a href="../assets/pdf/manuals/ABX-PRO_manual_web.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ProDrive PRO-100 User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
